2021-08-05  Andres Gonzalez  <andresg_22@apple.com>

        VoiceOver is not announcing the state as selected/unselected when an item is selected in a grid.
        https://bugs.webkit.org/show_bug.cgi?id=228840
        <rdar://78225826>

        Reviewed by Chris Fleizach.

        * accessibility/selected-state-changed-notifications.html:
        * platform/ios/TestExpectations:
        * platform/ios/accessibility/selected-state-changed-notifications-expected.txt: Added.

2021-08-05  Tim Nguyen  <ntim@apple.com>

        Implement support for <dialog> element cancel event
        https://bugs.webkit.org/show_bug.cgi?id=227534

        Reviewed by Chris Dumez.

        This makes <dialog> emit a cancel event then close when the escape key is pressed.

        Updated relevant WPT:
        - <dialog> cancel event WPTs: used send_keys instead of test_driver.Actions() (which are unsupported by WebKit test runner)
        - oncancel now is recognized

        Failing WPT:
        - dialog-cancel-with-input.html: needs <dialog> focusing steps (webkit.org/b/227537) to be implemented for <input> to get focus
        - dialog-cancel-with-select.html: needs <dialog> focusing steps (webkit.org/b/227537) to be implemented for <select> to get focus
        - dialog-keydown-preventDefault.html: current implementation does not prevent canceling from happening when keydown event has preventDefault()

        * platform/glib/imported/w3c/web-platform-tests/mathml/relations/html5-tree/math-global-event-handlers.tentative-expected.txt:
        * platform/gtk/imported/w3c/web-platform-tests/html/dom/idlharness.https-expected.txt:
        * platform/ios-wk2/imported/w3c/web-platform-tests/html/dom/idlharness.https-expected.txt:
        * platform/ios-wk2/imported/w3c/web-platform-tests/html/semantics/interactive-elements/the-dialog-element/dialog-cancel-events-expected.txt: Added.